--- a/GUI/Design.ui
+++ b/GUI/Design.ui
@@ -72,7 +72,7 @@ Note that if &quot;Convert Selected Images&quot; is not clicked before running t
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -86,7 +86,7 @@ Note that if &quot;Convert Selected Images&quot; is not clicked before running t
           </property>
          </widget>
         </item>
-        <item row="1" column="3">
+        <item row="1" column="4">
          <widget class="QLineEdit" name="image_directory">
           <property name="readOnly">
            <bool>true</bool>
@@ -107,7 +107,7 @@ Note that if &quot;Convert Selected Images&quot; is not clicked before running t
           </property>
          </widget>
         </item>
-        <item row="3" column="3">
+        <item row="3" column="4">
          <widget class="QLineEdit" name="output_directory">
           <property name="text">
            <string/>
@@ -117,44 +117,7 @@ Note that if &quot;Convert Selected Images&quot; is not clicked before running t
           </property>
          </widget>
         </item>
-        <item row="4" column="2" colspan="2">
-         <widget class="QLabel" name="label_4">
-          <property name="text">
-           <string>Choose Image Sizes for Computations:</string>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="2">
-         <widget class="QRadioButton" name="use_i607">
-          <property name="text">
-           <string>Use i607 images</string>
-          </property>
-          <property name="checked">
-           <bool>true</bool>
-          </property>
-          <attribute name="buttonGroup">
-           <string notr="true">buttonGroup</string>
-          </attribute>
-         </widget>
-        </item>
-        <item row="5" column="3">
-         <widget class="QPushButton" name="convert_selected_images">
-          <property name="text">
-           <string>Convert Selected Images</string>
-          </property>
-         </widget>
-        </item>
-        <item row="6" column="2">
-         <widget class="QRadioButton" name="use_i203">
-          <property name="text">
-           <string>Use i203 images</string>
-          </property>
-          <attribute name="buttonGroup">
-           <string notr="true">buttonGroup</string>
-          </attribute>
-         </widget>
-        </item>
-        <item row="7" column="3">
+        <item row="8" column="4">
          <widget class="QComboBox" name="interpolation_alg_centering">
           <item>
            <property name="text">
@@ -193,7 +156,7 @@ Note that if &quot;Convert Selected Images&quot; is not clicked before running t
           </item>
          </widget>
         </item>
-        <item row="7" column="2">
+        <item row="8" column="2">
          <widget class="QLabel" name="label_19">
           <property name="text">
            <string>Affine Transformation
@@ -201,7 +164,7 @@ Interpolation Algorithm:</string>
           </property>
          </widget>
         </item>
-        <item row="0" column="0" rowspan="8" colspan="2">
+        <item row="0" column="0" rowspan="9" colspan="2">
          <widget class="QTreeWidget" name="picture_dir_tree">
           <property name="selectionMode">
            <enum>QAbstractItemView::MultiSelection</enum>
@@ -219,10 +182,64 @@ Interpolation Algorithm:</string>
           </column>
          </widget>
         </item>
-        <item row="0" column="2" colspan="2">
+        <item row="0" column="2" colspan="3">
          <widget class="QLabel" name="label_2">
           <property name="text">
            <string>Input Image Directory:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="4">
+         <widget class="QRadioButton" name="use_i203">
+          <property name="text">
+           <string>Use i203 images</string>
+          </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup</string>
+          </attribute>
+         </widget>
+        </item>
+        <item row="5" column="4">
+         <widget class="QLineEdit" name="iX">
+          <property name="text">
+           <string>807</string>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="2">
+         <widget class="QRadioButton" name="use_i607">
+          <property name="text">
+           <string>Use i607 images</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup</string>
+          </attribute>
+         </widget>
+        </item>
+        <item row="4" column="2" colspan="3">
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>Choose Image Sizes for Computations:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="2">
+         <widget class="QRadioButton" name="use_iX">
+          <property name="text">
+           <string>Use iX images with X:</string>
+          </property>
+          <attribute name="buttonGroup">
+           <string notr="true">buttonGroup</string>
+          </attribute>
+         </widget>
+        </item>
+        <item row="6" column="3" rowspan="3" colspan="2">
+         <widget class="QPushButton" name="convert_selected_images">
+          <property name="text">
+           <string>Convert Selected Images</string>
           </property>
          </widget>
         </item>
@@ -317,7 +334,7 @@ Interpolation Algorithm:</string>
            </size>
           </property>
           <property name="currentIndex">
-           <number>1</number>
+           <number>4</number>
           </property>
           <widget class="QWidget" name="tab_3">
            <attribute name="title">
@@ -1925,22 +1942,22 @@ In chunks of:</string>
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroup_8"/>
-  <buttongroup name="buttonGroup"/>
-  <buttongroup name="buttonGroup_6"/>
-  <buttongroup name="buttonGroup_5"/>
-  <buttongroup name="buttonGroup_7"/>
-  <buttongroup name="buttonGroup_15"/>
-  <buttongroup name="buttonGroup_2"/>
-  <buttongroup name="buttonGroup_10"/>
   <buttongroup name="buttonGroup_12"/>
-  <buttongroup name="buttonGroup_13"/>
-  <buttongroup name="buttonGroup_14"/>
-  <buttongroup name="buttonGroup_16"/>
+  <buttongroup name="buttonGroup"/>
+  <buttongroup name="buttonGroup_7"/>
+  <buttongroup name="buttonGroup_10"/>
   <buttongroup name="buttonGroup_11"/>
-  <buttongroup name="buttonGroup_3"/>
-  <buttongroup name="buttonGroup_4"/>
-  <buttongroup name="buttonGroup_9"/>
+  <buttongroup name="buttonGroup_6"/>
+  <buttongroup name="buttonGroup_13"/>
   <buttongroup name="buttonGroup_17"/>
+  <buttongroup name="buttonGroup_4"/>
+  <buttongroup name="buttonGroup_2"/>
+  <buttongroup name="buttonGroup_16"/>
+  <buttongroup name="buttonGroup_3"/>
+  <buttongroup name="buttonGroup_5"/>
+  <buttongroup name="buttonGroup_15"/>
+  <buttongroup name="buttonGroup_8"/>
+  <buttongroup name="buttonGroup_14"/>
+  <buttongroup name="buttonGroup_9"/>
  </buttongroups>
 </ui>
