--- a/GUI/Design.ui
+++ b/GUI/Design.ui
@@ -72,7 +72,7 @@ Note that if &quot;Convert Selected Images&quot; is not clicked before running t
        </sizepolicy>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -2138,6 +2138,9 @@ R, M Angle (rad):</string>
         </item>
         <item row="14" column="0" colspan="4">
          <widget class="QTabWidget" name="tabWidget_3">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
           <property name="currentIndex">
            <number>2</number>
           </property>
